--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,15 @@
 <%= render 'layouts/header' %>
 
 <div class="container">
-<%= yield %>
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+	<%= yield %>
+		</div>
+	</div>
 
 <%= render 'layouts/footer' %>
 </div>
+
 
 </body>
 </html>
