--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "About", about_path %></li>
+            <li><%= link_to "Manage Posts", posts_path %></li>
          
           </ul>
           <form class="navbar-form navbar-right">
