--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing posts</h1>
+<h3>Hello! Enter your<i> Favorite </i>recipes</h3>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
@@ -23,6 +23,7 @@
     <% end %>
   </tbody>
 </table>
+
 
 <br>
 
