--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,21 +4,5 @@
 </p>
 <% end %>
 
-<h2>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</h2>
+<%= render 'post', post: @post %>
 
-<h2>
-  <strong>Content:</strong>
-  <%= @post.content %>
-</h2>
-
-<p>
-	<div class="text-muted">
-	posted on <%= @post.created_at.to_formatted_s(:long) %>
-	</div>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
